--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -11,39 +11,33 @@ body {
    flex: 1 1 100vw;
 }
 
-header {
+header, nav, main, aside, footer{
     display: flex;
     margin: 3px;
-    flex: 1 1 100vw;
     background: #a1a1a1;
+}
+
+header {
+    flex: 1 1 100vw;
+    height: 100px;
 }
 
 nav {
-    display: flex;
-    margin: 3px;
     flex: 1 1 200px;
-    background: #a1a1a1;
 }
 
 main {
-    display: flex;
-    margin: 3px;
-    flex: 1 1 500px;
-    background: #a1a1a1;
+    flex: 20 1 500px;
+    height: calc(100vh - 224px);
 }
 
 aside {
-    display: flex;
-    margin: 3px;
     flex: 1 1 200px;
-    background: #a1a1a1;
 }
 
 footer {
-    display: flex; 
-    margin: 3px;
     flex: 1 1 100vw;
-    background: #a1a1a1;
+    height: 100px;
 }
 
 
