--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -1,3 +1,4 @@
+@charset "UTF-8";
 * {
     margin: 0;
     padding: 0;
@@ -93,13 +94,16 @@ a {
     nav{
         position: fixed;
         flex-direction: column;
-        width: 100vw;
-        height: 100vh;
+        width: 70vw;
+        height: 40vh;
         background: rgba(255,255,255, 0.8);
         align-items: center;
         justify-content: center;
         margin: 0;
         display: none;
+        opacity: 0;
+        transition: 0.3s;
+        border-radius: 20px;
     }
 
 }
