--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -52,6 +52,10 @@ main {
     height: calc(100vh - 224px);
 }
 
+h1{
+    display: block;
+    box-sizing: border-box;
+}
 aside {
     flex: 1 1 200px;
 }
