--- a/old/assets/styles/style.css
+++ b/old/assets/styles/style.css
@@ -6,10 +6,11 @@
 }
 
 body {
-   display: flex;
+    display: flex;
    flex-wrap: wrap;
    margin: 3px;
    flex: 1 1 100vw;
+   max-width: 1200px;
 }
 
 header, nav, main, aside, footer{
