--- a/styles/style copy.css
+++ b/styles/style copy.css
@@ -2,7 +2,7 @@
 
 @import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
 
-
+@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
 
 :root {
     --primary-azul: #81cdff; 
@@ -14,8 +14,6 @@
     --escuro: #4a4a4a;
 
     --gap: 3rem;
-    --font1: font-family: 'Roboto', Arial, sans-serif;
-
 }
 
 .grad1{
@@ -25,26 +23,33 @@
 * {
     margin: 0;
     padding: 0;
-    /* box-sizing: border-box;
-    font-family: 'Poppins', sans-serif; */
+    box-sizing: border-box;
+    font-family: 'Poppins', sans-serif;
 }
 
 body {
-   /* display: flex;
+   display: flex;
    flex-wrap: wrap;
    margin: 3px;
    flex: 1 1 100vw;
-   max-width: 1200px; */
+   max-width: 1200px;
 }
 
 header, nav, main, aside, footer{
-    
+    display: flex;
+    margin: 3px;
 }
 
 header {
+    flex: 1 1 100vw;
+    height: 70px;
+    border-bottom-left-radius: 20px;
+    border-bottom-right-radius: 20px;
+    margin: 0;
+    
 }
 
-#logo {
+header #logo {
     flex: 0 1 200px;
     margin-left: 15px;
     align-self: center;
@@ -52,7 +57,6 @@ header {
     width: 100px;
     display: flex;
     align-items: center;
-    
 }
 
 #openMenu, #closeMenu {
@@ -66,25 +70,41 @@ header {
 }
 
 nav {
+    flex: 1 1 100vw;
+    align-items: center;
+    justify-content: flex-end;
 }
 nav a {
+    margin: 3%;
+    font-size: 20pt;
 }
 
 main {
+    display: block;
+    flex: 20 1 500px; 
+    height: 600px;
 }
 
 h1{
+    font: inherit;
     font-family: 'Roboto', Arial, sans-serif;
-    font-size:  35px;
+        font-size:  35px;
 }
 
 h2{
+    
+    font: inherit;
     font-family: 'Roboto', Arial, sans-serif;
     font-size:  20px;
 }
 
+aside {
+    flex: 1 1 200px;
+}
 
 footer {
+    flex: 1 1 100vw;
+    height: 100px;
 }
 
 a {
