--- a/styles.css
+++ b/styles.css
@@ -14,7 +14,7 @@
 }
 
 .grad1{
-    background: linear-gradient(65deg, var(--primary-azul), var(--primary-lilasclaro), var(--primary-lilasescuro));
+    background: linear-gradient(190deg, var(--primary-azul), var(--primary-lilasclaro), var(--primary-lilasescuro));
 }
 
 /* Reset básico */
@@ -47,8 +47,6 @@ header {
   padding-left: 20px;
     
 }
-
-
 header nav {
     margin-left: auto;
 }
@@ -59,14 +57,12 @@ header nav ul {
     gap: 2rem;
     padding-right: 20px;
 }
-
 header nav ul li a {
     color: var(--claro);
     text-decoration: none;
     font-weight: bold;
     transition: color 0.3s ease;
 }
-
 header nav ul li a:hover {
     color: var(--escuro);
 }
@@ -77,26 +73,21 @@ section {
     max-width: 1200px;
     margin: 0 auto;
 }
-
 h1, h2, h3 {
     margin-bottom: 1rem;
     color: var(--primary-lilasescuro);
 }
-
 p {
     margin-bottom: 1rem;
     text-align: justify;
 }
-
 ul {
     margin: 1rem 0;
     padding-left: 1.5rem;
 }
-
 ul li {
     margin-bottom: 0.5rem;
 }
-
 #inicio {
     position: relative;
     height:400px; /* Ajuste conforme necessário */
@@ -116,7 +107,6 @@ ul li {
     object-fit: cover;
     z-index: -1; /* Coloca o vídeo atrás do conteúdo da seção */
 }
-
 .inicio-content {
     position: relative;
     z-index: 1; /* Garante que o conteúdo fique acima do vídeo */
@@ -127,8 +117,6 @@ ul li {
     font-size: 3rem;
     text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
 }
-
-
 /* Blog & Artigos */
 #blog article {
     border: 1px solid var(--secundary-aqua);
@@ -136,7 +124,6 @@ ul li {
     margin-bottom: 1rem;
     background-color: var(--claro);
 }
-
 #blog article a {
     color: var(--primary-lilasescuro);
     text-decoration: none;
@@ -149,10 +136,20 @@ ul li {
 
 /* Rodapé */
 footer {
-    background-color: var(--primary-lilasclaro);
-    color: var(--claro);
+  /*   background-color: var(--primary-lilasclaro);
+    color: var(--claro); */
+    background-color: #4a4a4a;
     text-align: center;
-    padding: 1rem 0;
+    padding: 0;
+}
+footer #contato {
+    padding: 15px 30px;
+
+}
+
+footer h2, p, a {
+    color: var(--claro);
+    text-decoration: none;
 }
 
 footer ul {
@@ -172,7 +169,26 @@ footer ul li a {
 footer ul li a:hover {
     color: var(--primary-azul);
 }
+footer #contato a {
+    display: flex;
+    align-items: center;
+    gap: 0.5rem; 
+    text-decoration: none;
+    color: inherit;
+    color: var(--claro);
+    text-decoration: none;
+    transition: color 0.3s ease;
+}
 
+.icon {
+    ;
+    height: 25px;
+    fill: var(--claro);
+}
+
+.copy {  
+    text-align: center;
+margin: 5px;}
 /* Responsividade */
 @media (max-width: 768px) {
     header nav ul {
