--- a/styles.css
+++ b/styles.css
@@ -80,6 +80,7 @@ h1, h2, h3 {
 p {
     margin-bottom: 1rem;
     text-align: justify;
+    color: var(--escuro);
 }
 ul {
     margin: 1rem 0;
@@ -180,8 +181,7 @@ footer #contato a {
     transition: color 0.3s ease;
 }
 
-.icon {
-    ;
+.icon {    
     height: 25px;
     fill: var(--claro);
 }
