--- a/styles.css
+++ b/styles.css
@@ -47,6 +47,17 @@ header {
   padding-left: 20px;
     
 }
+
+.div-img-logo a {
+    display: flex;
+    align-items: center;
+}
+
+.div-img-logo img {
+    max-width: 100%;
+    height: 60px;
+}
+
 header nav {
     margin-left: auto;
 }
@@ -65,6 +76,16 @@ header nav ul li a {
 }
 header nav ul li a:hover {
     color: var(--escuro);
+}
+
+#openMenu, #closeMenu {
+    border: none;
+    background: none;
+    font-size: 30px;
+    font-weight: bold;
+    padding: 0px 5px 0px 5px;
+    cursor: pointer;
+    display: none;
 }
 
 /* Seções principais */
@@ -189,18 +210,5 @@ footer #contato a {
 .copy {  
     text-align: center;
 margin: 5px;}
-/* Responsividade */
-@media (max-width: 768px) {
-    header nav ul {
-        flex-direction: column;
-        gap: 1rem;
-    }
 
-    section {
-        padding: 1.5rem;
-    }
 
-    footer ul {
-        flex-direction: column;
-    }
-}
