--- a/styles.css
+++ b/styles.css
@@ -69,13 +69,13 @@ header {
 header nav {
     flex: 1 1 100vw;
     align-items: center;
-    justify-content: flex-end;
-    padding-top: 25px;
+    padding-top: 0px;
     margin-left: auto;
     list-style: none;
     display: flex;
     padding-right: 20px;
-    gap: 2rem;
+    margin: auto;
+    gap: 1rem;
     
 }
 
@@ -309,19 +309,22 @@ footer #contato a {
         margin-right: 20px;
         color: var(--claro);
         cursor: pointer; 
+        padding: 5px;
+        
     }
 
     #closeMenu{
         position: fixed;
-        right: 15px;
+        right: 10px;
         top: 20px;
         cursor: pointer; 
+        font-size: 2rem;
     }
 
     nav{
         position: fixed;
         flex-direction: column;
-        width: 50vw;
+        width: 60vw;
         height: 40vh;
         background: rgba(255,255,255, 0.95);
         align-items: center;
@@ -345,5 +348,9 @@ footer #contato a {
         font-size: 1.5rem;
         margin: 1rem;
         z-index: 2;
+        padding: 0px;
+        margin: 0px;
+        align-items: center;
+
     }
 }
