--- a/styles.css
+++ b/styles.css
@@ -7,7 +7,8 @@
     --secundary-aqua: #b1c86f;
     --secundary-verde: #71c4b0;
     --claro: #fcfcfc;
-    --escuro: #4a4a4a;
+    --escuro: rgb(41, 41, 41);
+    --backgroud1: #e7e7e7;
 
     --gap: 3rem;
     --font1: 'Roboto', Arial, sans-serif;
@@ -25,57 +26,79 @@
 }
 
 /* Configurações gerais */
+
+section {
+    padding: var(--gap);
+    max-width: 100%;
+    margin: 0 auto;
+}
+
+h1 {
+    margin-bottom: 1rem;
+    text-align: center;
+    width: 100%;
+    margin: 2rem auto;
+    color: var(--escuro);
+    font-size: 3rem;
+}
+
+h2 {
+    margin: 1rem;
+    text-align: center;
+    width: 100%;
+    color: var(--escuro);
+    font-size: 2.5rem;
+}
+
+h3 {
+    text-align: center;
+    width: 100%;
+    color: var(--escuro);
+    font-size: 1.3rem;
+}
+
+p {
+    margin-bottom: 1rem;
+    text-align: justify;
+    color: var(--escuro);
+}
+
+ul {
+    margin: 1rem 0;
+    padding-left: 1.5rem;
+}
+ul li {
+    margin-bottom: 0.5rem;
+}
+
 body {
     margin-top: 70px; /* Para não sobrepor o conteúdo ao header */
     font-family: var(--font1);
-    background-color: var(--claro);
-    color: var(--escuro);
+    background-color: var(--backgroud1);
     line-height: 1.6;
     width: 100%;
 }
 
-/* Cabeçalho */
+/* HEADER */
 header {
-    height: 70px;
     display: flex;
+    justify-content: space-between;
+    padding: 20px;
+    align-items: center;
+    height: 70px;
     background-color: var(--escuro);
-    color: var(--claro);
-    padding: 0;
-    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
     position: fixed;
     top: 0;
     width: 100%;
-    z-index: 3; 
+    z-index: 3;
         
 }
 
-.container-header{
+.logoimg{
     display: flex;
-    /* justify-content: space-between; */
-    /* align-items: center; */
-    max-width: 1200px;
-    margin: 0 auto;
-    padding: 0px;
-}
-
-.div-img-logo {
-    padding-left: 20px;
-    align-items: left;
-    text-align: left;
-
-    
-}
-
-.div-img-logo a {
-    display: flex;
-    align-items: center;
-}
-
-.div-img-logo img {
-    max-width: 100%;
-    height: 50px;
-    margin: 10px;    
-
+    padding: 5px ;
+    height: 60px ;
+    object-fit: cover;   
 }
 
 header nav {
@@ -118,36 +141,13 @@ header nav ul li a:hover {
     margin-right: 15px;
 }
 
-/* Seções principais */
-section {
-    padding: var(--gap);
-    max-width: 100%;
-    margin: 0 auto;
-}
-
-h1, h2, h3 {
-    margin-bottom: 1rem;
-    color: var(--primary-lilasescuro);
-}
-p {
-    margin-bottom: 1rem;
-    text-align: justify;
-    color: var(--escuro);
-}
-ul {
-    margin: 1rem 0;
-    padding-left: 1.5rem;
-}
-ul li {
-    margin-bottom: 0.5rem;
-}
 #inicio {
     position: relative;
     height:500px;
     display: flex;
     align-items: center;
     justify-content: center;
-    color: var(--claro);
+    
     overflow: hidden; /* garantir que o vídeo não ultrapasse a seção */
     padding: 0px ;
 }
@@ -161,13 +161,14 @@ ul li {
     object-fit: cover;
     z-index: -1; /* Coloca o vídeo atrás do conteúdo da seção */
 }
+
 .inicio-content {
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
     z-index: 1; /* Garante que o conteúdo fique acima do vídeo */
-    background-color: rgba(0, 0, 0, 0.2);
+    
     padding: 3rem;
     margin: 0;
     height: 100%;
@@ -188,20 +189,42 @@ ul li {
 }
 
 /* SERVIÇOS */
-/* CSSS flexbox */
 
-.servicos {
+.width-100 {
     display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100vw;
+    background-color: var(--backgroud1);
+    margin: 0;
+    padding: 0;
+}
+
+.corpodasecao {
+    display: flex;
+    justify-content: center;
+    align-items: center;
     flex-wrap: wrap;
     max-width: 1200px;
     margin: 0 auto;
+    background-color: #e7e7e7;
+}
+
+.h2serv {
+    padding: 1rem;
+    margin: 0 ;
 }
 
 .caixa-serv {
-    flex: 1 1 200px;
+    flex: 3fr;
+    align-items: center;
     margin: 10px;
     border-radius: 20px;
-    border: 1px solid black;
+    /*border: 1px solid black;*/
+    box-shadow: 0 4px 8px rgba(133, 133, 133, 0.5);
+    max-width: 300px;
+    background-color: white;
+    min-height: 450px;
 }
 
 .img-serv {
@@ -210,93 +233,24 @@ ul li {
     border-radius: 20px 20px 0px 0px;
 }
 
-.txtserv {
-    color: black;
-    list-style: none;
+.h3serv {
+    font-size: 1.2rem;
+    margin: 0 auto;
+    padding: 0 1rem;
+    text-align:left;
+
 }
 
+.txtserv {
+    padding: 0 1rem;
+    color: black;
+    list-style: none;
+    font-size: 1rem;
+    text-align:left;
+}
 
 
 /* FIM SERVIÇOS CSSS flexbox */
-
-
-.section-service {
-    display: flex;
-    flex-wrap: wrap;
-    width: 100vw;
-    margin: 0 auto;
-    background: #eeeeee;
-}
-container-service {
-    display: block;
-    flex-wrap: wrap;
-    justify-content: center;
-    gap: 1rem;
-    
-    margin: 0 auto;
-    max-width: 1200px;
-}
-
-
-
-.section-service > h2 {
-    flex-basis: 100%;
-    text-align: center;
-    margin-bottom: 2rem;
-    color: var(--escuro);
-    
-}
-
-.article-service {
-    flex: 1 1 200px;
-    margin: 20px;
-    max-width: 400px;
-    background-color: white;
-    
-  
-
-}
-
-.container-bloco{
-    flex-direction: column;
-    justify-content: center;
-    gap: 1rem;
-    margin: 0px;
-    border-radius: 20px;
-    height: 600px;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.5);
-}
-
-.img-service {
-    display: flex;
-    height: 200px;
-    margin: 0 auto;
-    justify-content: center;
-    padding: 0px;
-}
-
-.img-service img {
-    max-width: 100%;
-    height: auto;
-    border-radius: 20px 20px 0px 0px;
-}
-
-.txt-service {
-    padding: 5px;
-    text-align: center;
-    color: var(--escuro);
-}
-
-.txt-service  p {
-    color: black;
-    list-style: none;
-}
-
-
-
-
-
-
 
 
 /* Blog & Artigos */
