--- a/styles.css
+++ b/styles.css
@@ -143,7 +143,7 @@ header nav ul li a:hover {
 
 #inicio {
     position: relative;
-    height:500px;
+    height:60vh;
     display: flex;
     align-items: center;
     justify-content: center;
