--- a/styles.css
+++ b/styles.css
@@ -58,9 +58,9 @@ h3 {
 }
 
 p {
-    margin-bottom: 1rem;
-    text-align: justify;
-    color: var(--escuro);
+    font-family: var(--font1);
+    color: black;
+    font-size: 1em;
 }
 
 ul {
@@ -82,16 +82,24 @@ body {
 /* HEADER */
 header {
     display: flex;
-    justify-content: space-between;
+    justify-content: center;
     padding: 20px;
     align-items: center;
     height: 70px;
-    background-color: var(--escuro);
+    background-color: white;
     position: fixed;
     top: 0;
     width: 100%;
     z-index: 3;
         
+}
+
+.div1 {
+    display: flex;
+    max-width: 1200px;
+    justify-content: space-between;
+    align-items: center;
+    width: 100%;
 }
 
 .logoimg{
@@ -109,10 +117,12 @@ header nav {
     list-style: none;
     display: flex;
     padding-right: 20px;
-    margin: auto 20px auto auto;
-    gap: 1rem;
+    
+    gap: 3rem;
     justify-content: flex-end;
+    margin-left: auto;
 }
+
 
 header nav ul {
     list-style: none;
@@ -120,14 +130,23 @@ header nav ul {
     gap: 2rem;
     padding-right: 20px;
 }
+
 header nav ul li a {
     color: var(--claro);
     text-decoration: none;
     font-weight: bold;
     transition: color 0.3s ease;
 }
-header nav ul li a:hover {
+
+#menu a:hover {
+    color: var(--primary-lilasescuro);
+}
+
+#menu a {
     color: var(--escuro);
+    text-decoration: none;
+    font-weight: bold;
+    transition: color 0.3s ease;
 }
 
 #openMenu, #closeMenu {
@@ -140,6 +159,10 @@ header nav ul li a:hover {
     display: none;
     margin-right: 15px;
 }
+
+
+
+
 
 #inicio {
     position: relative;
@@ -434,7 +457,7 @@ footer #contato a {
     #openMenu{
         margin-left: auto;
         margin-right: 20px;
-        color: var(--claro);
+        color: black;
         cursor: pointer; 
         padding: 5px;
         
@@ -452,11 +475,11 @@ footer #contato a {
         position: fixed;
         flex-direction: column;
         width: 60vw;
-        height: 40vh;
-        background: rgba(255,255,255, 0.95);
+        height: 80vh;
+        background: rgba(255,255,255, 0.98);
         align-items: center;
         justify-content: center;
-        margin: 0;
+        margin-top: 0px;
         display: none;
         opacity: 0;
         transition: 0.3s;
@@ -472,8 +495,8 @@ footer #contato a {
 
     #menu a {
         color: black;
-        font-size: 1.5rem;
-        margin: 1rem;
+        font-size: 1.2rem;
+        
         z-index: 2;
         padding: 0px;
         margin: 0px;
