--- a/styles.css
+++ b/styles.css
@@ -150,6 +150,7 @@ header {
     position: fixed;
     top: 0;
 }
+
 .contatos-top-container {
     display: flex;
     width: 100%;
@@ -197,6 +198,7 @@ header {
     height: 70px;
     padding: 0;
     z-index: 20;
+    border-bottom: 1px solid var(--secundary-verde);
     
 }
 
@@ -223,6 +225,7 @@ header {
     padding: 5px ;
     height: 60px ;
     object-fit: cover;   
+    
 }
 
 header nav {
