--- a/styles.css
+++ b/styles.css
@@ -186,39 +186,33 @@ header {
     margin-right: 10px;
 }
 
-
-
-.header-movel {
+.header-fixed {
     display: flex;
-    max-width: 1200px;
-    justify-content: space-between;
+    position: fixed;
+    
     align-items: center;
     margin: 0 auto;
     width: 100%;
     height: 70px;
     padding: 0;
     z-index: 20;
-    border-bottom: 1px solid var(--secundary-verde);
+    margin: 0;
+        transition: transform 0.1s ease-in-out, opacity 0.1s ease-in-out;
+    /*background-color: var(--claro);*/
     
 }
 
-.header-fixed {
-    position: fixed;
-    top: 0;
-    justify-content: space-between;
-    align-items: center;
-    margin: 0 auto;
-    width: 100%;
-    height: 70px;
-    padding: 0;
-    background-color: var(--escuro);
-    z-index: 10;
-    display: none; /* Oculta o elemento */
-}
-.header-fixed-content{
+.header-content{
     display: flex;
-    max-width: 1200px;
+    width: 1200px;
+    margin: 0 auto;
+    justify-content: space-between;
+    border-bottom: 0.5px solid rgba(113, 196, 176, 0.4); 
+    /*border: 1px solid black;*/
+
 }
+
+
 
 .logoimg{
     display: flex;
@@ -284,8 +278,7 @@ header nav ul li a {
     display: flex;
     align-items: center;
     justify-content: center;
-    
-    overflow: hidden; /* garantir que o vídeo não ultrapasse a seção */
+    overflow: hidden; 
     padding: 0px ;
 }
 
@@ -308,15 +301,15 @@ header nav ul li a {
     padding: 3rem;
     margin: 0;
     height: 100%;
-    width: 80vw;
+    width: 90vw;
     
 }
 .inicio-content h1{
     line-height: 1.2;
-    color: white;
+    color: var(--escuro);
     font-size: 4rem;
     text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
-    /* padding-right: 20vw; */
+    
 }
 
 .inicio-content p {
