--- a/styles.css
+++ b/styles.css
@@ -80,8 +80,7 @@ h1 {
 
 }
 
-h2 {
-    
+h2 {    
     text-align: center;
     width: 100%;
     color: var(--escuro);
@@ -93,13 +92,12 @@ h3 {
     text-align: center;
     width: 100%;
     color: var(--escuro);
-    font-family: var(--font1);
+    font-family: var(--font2);
     font-size: 1.3rem;
 }
 
 p {
-    font-family: var(--font1);
-    color: black;
+    color: var(--escuro);
     font-size: 1em;
     font-family: var(--font2);
 }
@@ -206,17 +204,12 @@ header {
 
 }
 
-
-
 .logoimg{
     display: flex;
     padding: 5px ;
     height: 60px ;
     object-fit: cover;   
 }
-
-
-
 
 header nav {
     flex: 1 1 100vw;
@@ -230,7 +223,6 @@ header nav {
     justify-content: flex-end;   
     
 }
-
 
 header nav ul {
     list-style: none;
@@ -269,7 +261,7 @@ header nav ul li a {
     margin-right: 15px;
 }
 
-/* MAIN */
+/*               MAIN                        */
 
 .inicio{
     position:static;
@@ -284,8 +276,6 @@ header nav ul li a {
    /*  border:  1px solid black; */
     background-color: rgba(0, 0, 0, 0.4);
 }
-
-
 
 #section-video {
     position: absolute;
@@ -341,12 +331,10 @@ header nav ul li a {
 
 .corpodasecao {
     display: flex;
-    justify-content: auto;
-    
+    justify-content: auto; 
     flex-wrap: wrap;
     max-width: 1200px;
     margin: 0 auto;
-    
 }
 
 .h2serv {
@@ -390,11 +378,8 @@ header nav ul li a {
     margin-bottom: 1rem;
 }
 
+/*                           Blog & Artigos                             */
 
-/* FIM SERVIÇOS CSSS flexbox */
-
-
-/* Blog & Artigos */
 #blog article {
     border: 1px solid var(--secundary-aqua);
     padding: 1rem;
@@ -410,8 +395,6 @@ header nav ul li a {
 #blog article a:hover {
     text-decoration: underline;
 }
-
-
 
 /* FAQ
 #faq {
@@ -440,7 +423,7 @@ header nav ul li a {
 }
 */
 
-/*Chamda de ação*/
+/*Chamada de ação*/
 .acao {
     background-image: url('img/img-chamada-acao.png');
     background-size: cover;
@@ -457,7 +440,68 @@ header nav ul li a {
     
 }
 
+/*Formulário de contato*/
+.containerform {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin: 20px auto;
+    padding: 20px;
+    max-width: 1200px;
+    background: white;
+    border-radius: 8px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+}
 
+.info {
+    display: block;
+    /* flex: 1; */
+    padding-right: 20px;
+    justify-content: left;
+}
+.info p{
+    font-size: 1rem;
+    color: var(--escuro);
+}
+
+/* h2 {
+    color: #2c3e50;
+}
+
+h3 {
+    color: #2980b9;
+} */
+
+form {
+    flex: 1;
+}
+
+label {
+    display: block;
+    margin: 10px 0 5px;
+    font-weight: bold;
+}
+
+input[type="text"], input[type="email"], input[type="tel"], input[type="date"], textarea {
+    width: 100%;
+    padding: 8px;
+    margin-bottom: 10px;
+    border-radius: 4px;
+    border: 1px solid #ccc;
+}
+
+button {
+    background-color: #27ae60;
+    color: black;
+    padding: 10px;
+    border: none;
+    border-radius: 8px;
+    cursor: pointer;
+}
+
+button:hover {
+    background-color: #219150;
+}
 
 
 /* Rodapé */
